turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:3: error: STOP is already defined as value STOP
val STOP:Int = 0;
    ^